2007-04-07  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init, texi2html.pl: when INLINE_CONTENTS is set, 
	the table of contents and short table of contents are output 
	where they are defined, except if setcontentsaftertitlepage is set.
	If setcontentsaftertitlepage is set the contents is associated
	with the title.
	Handle @setcontentsaftertitlepage and @setshortcontentsaftertitlepage.
	Don't output a navigation panel nor an about page when not SPLIT and no
	SECTION_NAVIGATION.
	* Tests/contents*: new tests for contents
	* examples/book.init,noheaders.init: update
	* doc/*: update

2007-04-06  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: Texi2HTML::THIS_SECTION is always defined, 
	it is empty when it has no elements.
	Print table of contents when there is no top node content
	and no Overview.
	Don't add the section title to the html title when the 
	document isn't split.
	* Tests/*: regenerate

2007-02-17  Derek Price  <derek@ximbiot.com>

	* doc/texi2html.texi: Clean out some old, commented-out cruft.

2007-02-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: set default out encoding to utf8. This could
	help with translations.
	* Makefile.am, manage_i18n.pl.in: add japanese translations, 
	from fedora.
	* doc/Makefile.am: call perl with -x when called directly on 
	texi2html.pl

2007-01-08  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: correctly set node filenames even if NODE_FILES
	isn't set.
	Handle right 2 @def-like commands on a line.
	Collect split and mono entry in htmlxref.cnf.
	* texi2html.init: take into account when a target is split
	in crossref. When there is a split and a mono entry, chose
	based on split.
	* examples/book.init: update to new use of directions.
	* Tests/*: new tests for htmlxref.cnf file use.
	New test for double @deffn on the same line.
	* */Makefile.in, aclocal.m4, configure: use automake 1.10 and
	autoconf 2.61.

2006-08-06  Patrice Dumas  <dumas@centre-cired.fr>
